<resources>
    <string name="app_name">Utility</string>
    <string name="title_activity_launcher">Launcher</string>
    <string name="title_activity_launcher_big">Big Launcher</string>
    <string name="title_activity_launcher_phone">Phone Launcher</string>
    <string name="title_activity_sensors">Device Sensors</string>
    <string name="title_activity_list">List Randomizer</string>
    <string name="title_activity_qr_code_generator">Generate QR Code</string>
    <string name="title_activity_versions">Android Versions</string>
    <string name="title_activity_test_bottom_navigation">TestBottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="title_data">Pieces of Data</string>
    <string name="title_activity_info">Device Info</string>
    <string name="title_activity_time">Time Tracking</string>
    <string name="title_downloader">Download Files</string>
    <string name="title_calculate">Calculate</string>
    <string name="title_shared_text">Shared Text</string>

    <string name="wait">Please wait…</string>

    <string name="shortcut_map">Maps</string>
    <string name="shortcut_barcode">Barcode Scanner</string>
    <string name="shortcut_file_browser">File Browser</string>
    <string name="shortcut_time_tracking">Time Tracking</string>
    <string name="shortcut_disabled">Shortcut disabled</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email / Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="card">Card</string>
    <string name="file_image">File Image</string>

    <string name="title_activity_data_heavy">DataHeavyActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string-array name="file_actions">
        <item>Move</item>
        <item>Move Up</item>
        <item>Meta Sort</item>
        <item>Details</item>
        <item>Slideshow</item>
        <item>Slow Slideshow</item>
        <item>Delete</item>
        <item>Copy Path</item>
        <item>Open</item>
        <item>Open External</item>
        <item>Open Text Editor</item>
    </string-array>

    <string-array name="conversion_types">
        <item>Distance (mm)</item>
        <item>Distance (m)</item>
        <item>Distance (km)</item>
        <item>Area (m²)</item>
        <item>Area (km²)</item>
        <item>Volume (l)</item>
        <item>Weight (g)</item>
        <item>Weight (kg)</item>
        <item>Temperature (C°)</item>
    </string-array>

    <string-array name="map_actions">
        <item>Share This Location</item>
        <item>Straight Distance</item>
        <item>Draw Circle Here</item>
    </string-array>

    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="home_second">Home Second</string>

    <string name="loading">Loading...</string>

    <string-array name="urls">
        <item>http://download.mapsforge.org/maps/world/world.map</item>
        <item>http://download.mapsforge.org/maps/v5/africa/south-africa-and-lesotho.map</item>
        <item>http://download.mapsforge.org/maps/v5/europe/iceland.map</item>
    </string-array>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
</resources>
